règle du double trois libre implémentée

--- a/Game/Makefile
+++ b/Game/Makefile
@@ -10,12 +10,15 @@ SRCS	= main.cpp \
 
 OBJS	= $(SRCS:.cpp=.o)
 
-CFLAGS	+= -I. -Wall -Werror -Wextra -W
+CFLAGS	+= -I. -Wall -Werror -Wextra -W -std=c++11
 
 all: $(NAME)
 
+%.o:	%.cpp
+	g++ $(CFLAGS) -c -o $@ $<
+
 $(NAME):	$(OBJS)
-		$(CC) $(OBJS) -o $(NAME) $(CFLAGS)
+		$(CC) $(OBJS) -o $(NAME)
 
 clean:
 	$(RM) $(OBJS)
